# sourcerer

./: .clang-tidy  .env.example  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODING_GUIDELINES.md  LICENSE  Makefile  README.md  setup.py  test_coco.sh
.ai/: repo-overrides.md
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
docs/: ARCHITECTURE.md  CODE_COVERAGE_PLAN.md  quality_targets.md  sourceror_analysis.md
docs/adr/: 0001-misalignment-resolution-confidence-scoring.md
docs/project-rules/: PROJECT-README.md  PROJECT-architecture.md  PROJECT-sourcerer.md  README.md
examples/: example.hints.json
examples/test_binaries/: pi_disasm.s  pi_disasm_v2.s  pi_final.s
examples/test_binaries/pi/PI/: OBJ.txt
examples/test_sources/pi/SOURCE/: PI.ADD.S  PI.DIV.S  PI.LOOK.S  PI.MACS.S  PI.MAIN.S  PI.NAMES.S  PI.START.S
samples/: README.md
samples/coco/: ZAXXON.DSK
scripts/: analyze_coverage.py  convert_coco_symbols.py
src/: disassembler_workflow.cpp  disassembler_workflow.h  main.cpp
src/analysis/: analysis_config.h  code_analyzer.cpp  code_analyzer.h  data_heuristics_engine.cpp  data_heuristics_engine.h  disassembly_orchestrator.cpp  disassembly_orchestrator.h  entry_point_discovery_strategy.cpp  entry_point_discovery_strategy.h  equate_generator.cpp  equate_generator.h  execution_simulator.cpp  execution_simulator.h  graphics_detection_strategy.cpp  graphics_detection_strategy.h  hints_parser.cpp  hints_parser.h  label_generator.cpp  label_generator.h  pattern_detector.cpp  pattern_detector.h  xref_builder.cpp  xref_builder.h
src/analysis/llm/: chunk_builder.cpp  chunk_builder.h  claude_analyzer.cpp  claude_analyzer.h  code_pattern_detector.cpp  code_pattern_detector.h  data_code_scanner.cpp  data_code_scanner.h  llm_analyzer.cpp  llm_analyzer.h  llm_analyzer_registry.cpp  llm_analyzer_registry.h  string_scanner.cpp  string_scanner.h
src/analysis/strategies/: code_flow_strategy.cpp  code_flow_strategy.h  data_heuristics.cpp  data_heuristics.h  entry_point_discovery_strategy.cpp  entry_point_discovery_strategy.h  graphics_detector.cpp  graphics_detector.h  inline_data_scanner.cpp  inline_data_scanner.h  jump_table_detector.cpp  jump_table_detector.h  misalignment-resolution.md  misalignment_resolver.cpp  misalignment_resolver.h  reclassification_strategy.cpp  reclassification_strategy.h
src/core/: address_map.cpp  address_map.h  binary.cpp  binary.h  constants.h  disasm_context.cpp  disasm_context.h  equate_provider.h  exceptions.cpp  exceptions.h  instruction.cpp  instruction.h  platform_hints.cpp  platform_hints.h  symbol_table.cpp  symbol_table.h
src/cpu/: cpu_plugin.h  cpu_registry.cpp  cpu_registry.h  cpu_state.h
src/cpu/m6502/: cpu_6502.cpp  cpu_6502.h  cpu_state_6502.cpp  cpu_state_6502.h  opcodes_6502.cpp  opcodes_6502.h
src/cpu/m6809/: cpu_6809.cpp  cpu_6809.h  cpu_state_6809.cpp  cpu_state_6809.h  indexed_mode.cpp  indexed_mode.h  opcodes_6809.cpp  opcodes_6809.h
src/disk/: acx_extractor.cpp  acx_extractor.h  coco_extractor.cpp  coco_extractor.h  disk_extractor.h  disk_registry.cpp  disk_registry.h  raw_file.cpp  raw_file.h
src/output/: address_analyzer.cpp  address_analyzer.h  base_formatter.cpp  base_formatter.h  data_collector.cpp  data_collector.h  edtasm_formatter.cpp  edtasm_formatter.h  formatter.h  formatter_config.h  formatter_registry.cpp  formatter_registry.h  label_resolver.cpp  label_resolver.h  merlin_formatter.cpp  merlin_formatter.h  scmasm_formatter.cpp  scmasm_formatter.h
src/utils/: cli_parser.cpp  cli_parser.h  logger.cpp  logger.h
symbols/: PLATFORMS.md  PLATFORM_HINTS.md  README.md  apple2.user.json.example  apple2_hardware.json  apple2_monitor.json  apple2_prodos_fx.json  apple2_prodos_mli.json  apple2_rom.json  apple2_zeropage.json  apple2e.json  apple2gs_firmware.json  apple2plus_monitor.json  coco_basic.json  coco_constants.json  coco_extbas.json  coco_hardware.json  coco_zeropage.json  dos33.json  prodos8.json  prodos_hints.json
tests/: CMakeLists.txt  test_address_map.cpp  test_binary.cpp  test_code_analyzer_integration.cpp  test_cpu_6502.cpp  test_cpu_6809.cpp  test_cpu_state.cpp  test_edtasm_formatter.cpp  test_execution_simulator.cpp  test_execution_simulator_enhanced.cpp  test_extended_passes.cpp  test_hints_parser.cpp  test_instruction.cpp  test_integration.cpp  test_label_generator.cpp  test_llm_analyzer.cpp  test_merlin_formatter.cpp  test_opcodes_6502.cpp  test_pattern_detector.cpp  test_platform_hints.cpp  test_roundtrip.py  test_scmasm_formatter.cpp  test_symbol_table.cpp  test_xref_builder.cpp
tests/integration/: README.md  test_apple2.py  test_coco.py  test_integration.py  test_model3.py
